RESOLVED FIXED278595
[JSC] Allocate wasm entrypoint thunk from non-faillable allocation region
https://bugs.webkit.org/show_bug.cgi?id=278595
Summary [JSC] Allocate wasm entrypoint thunk from non-faillable allocation region
Yusuke Suzuki
Reported 2024-08-23 18:50:05 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-23 18:50:16 PDT
Yusuke Suzuki
Comment 2 2024-08-23 18:50:38 PDT
Yusuke Suzuki
Comment 3 2024-08-23 18:52:48 PDT
EWS
Comment 4 2024-08-24 09:31:46 PDT
Committed 282700@main (060bf1f5b291): <https://commits.webkit.org/282700@main> Reviewed commits have been landed. Closing PR #32660 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.