[JSC] Allocate wasm entrypoint thunk from non-faillable allocation region https://bugs.webkit.org/show_bug.cgi?id=278595 rdar://131790757

Reviewed by Mark Lam.

These wasm thunks should be allocated as non-faillable.

* Source/JavaScriptCore/wasm/js/JSToWasm.cpp:
(JSC::Wasm::createJSToWasmJITInterpreterCrashForSIMDParameters):
(JSC::Wasm::createJSToWasmJITInterpreter):

Canonical link: https://commits.webkit.org/282700@main